# pyInteractiveFixedEffects

./: .gitignore  README.md  example.py  example_data.csv  pyproject.toml
src/: bai2009.py
src/pyInteractiveFixedEffects.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
